--- a/Facebook Clone/TEST 2/style.css
+++ b/Facebook Clone/TEST 2/style.css
@@ -36,21 +36,21 @@ body
     margin-right: 20px;
     margin-top: 20px;
 }
-.center
-{
+.center{
+    height: 90%;
+    background: rgb(229, 243, 255);
    
-    height: 100%;
-    background: rgb(242, 242, 244);
 }
 .center h1
 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Geneva, Arial, Helvetica, sans-serif;
     float: left;
-    margin-left: 80px;
+    margin-left: 50px;
     margin-top: 20px;
 }
-
-
-
-
-
+.registration{
+    font-family: Geneva, Arial, Helvetica, sans-serif;
+    float: right;
+    margin-right: 300px;
+    margin-top: 100px;
+}
