--- a/Facebook Clone/TEST 2/style.css
+++ b/Facebook Clone/TEST 2/style.css
@@ -51,6 +51,11 @@ body
 .registration{
     font-family: Geneva, Arial, Helvetica, sans-serif;
     float: right;
-    margin-right: 300px;
+    margin-right: 200px;
     margin-top: 100px;
+}
+.map{
+    float: left;
+    margin-left: 60px;
+    margin-top: 50px;
 }
