--- a/Facebook Clone/TEST 2/style.css
+++ b/Facebook Clone/TEST 2/style.css
@@ -35,6 +35,7 @@ body
     float: right;
     margin-right: 20px;
     margin-top: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .center{
     height: 90%;
