--- a/Facebook Clone/TEST 2/style.css
+++ b/Facebook Clone/TEST 2/style.css
@@ -38,7 +38,7 @@ body
     font-family: Arial, Helvetica, sans-serif;
 }
 .center{
-    height: 90%;
+    height: 80%;
     background: rgb(229, 243, 255);
    
 }
@@ -59,5 +59,9 @@ body
     float: left;
     margin-left: 60px;
     margin-top: 50px;
-    
+
+}
+.footer{
+    background-color: black;
+    height: 11.5%;
 }
