--- a/Assignments/assign.css
+++ b/Assignments/assign.css
@@ -1,4 +1,11 @@
 .ToDo{
     text-align: center;
-    
+    border: 2px solid black;
+}
+
+.Images{
+    text-align: center;
+    border: 2px solid black;
+    padding: 5px;
+
 }
