--- a/Dominos Clone/style.css
+++ b/Dominos Clone/style.css
@@ -22,18 +22,34 @@ body{
     background: rgb(222, 206, 113);
     
 }
+.Logo
+{
+  margin-left: 50px;
+}
 .nav
 {
-    border: 2px solid black;
-    text-decoration: none;
+    /* border: 2px solid black; */
+    
     text-align: center;
     display: flex;
-    margin: 20px;
+    margin: 15px 400px;
+    text-decoration: none;
+   /*  list-style: none; */
 
+}
+.nav li
+{
+    margin: 1px 10px;  
+    list-style: none;
+    text-decoration: none;
 }
 
 .button
 {
-  margin: auto;  
+  
+  margin: 15px; 
+  height: 100px;
+  width: 200px;
+  
 
 }
