--- a/Dominos Clone/style.css
+++ b/Dominos Clone/style.css
@@ -12,7 +12,7 @@ body{
     margin: auto;
     width: auto;
     height: 100%;
-    background: rgb(1, 0, 3);
+    background: rgb(255, 255, 255);
 }
 
 .header{
@@ -34,7 +34,7 @@ body{
     text-align: center;
     display: flex;
     margin: 15px 400px;
-   
+  /*   text-decoration: none; */
    
 
 }
@@ -42,6 +42,23 @@ body{
 {
     margin: 1px 10px;  
     list-style: none;
+    text-decoration: none;
     
 }
+.nav a
+{
+    text-decoration: none;
+}
 
+.banner
+{
+   /*  border: 4px solid black; */
+    display: flex;
+    background-color: rgb(77, 154, 206);
+    height:400px;
+}
+.Rider
+{
+    margin-left: 1058px;
+
+}
