--- a/Dominos Clone/style.css
+++ b/Dominos Clone/style.css
@@ -1,65 +1,81 @@
-*{
-    margin:0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-    background: rgb(25, 50, 194);
+body {
+  background: rgb(25, 50, 194);
 }
 
-.main{
-
-    margin: auto;
-    width: auto;
-    height: 100%;
-    background: rgb(255, 255, 255);
+.main {
+  margin: auto;
+  width: auto;
+  height: 100%;
+  background: rgb(255, 255, 255);
 }
 
-.header{
-    padding: 20px;
-    display: flex;
-    height: 40px;
-    background: rgb(255, 255, 255);
-    
+.header {
+  padding: 20px;
+  display: flex;
+  height: 40px;
+  background: rgb(255, 255, 255);
 }
-.Logo
-{
+.Logo {
   margin-left: 50px;
 }
-.nav
-{
-    /* border: 2px solid black; */
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
-    text-align: center;
-    display: flex;
-    margin: 10px 400px;
+.nav {
+  /* border: 2px solid black; */
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  text-align: center;
+  display: flex;
+  margin: 10px 400px;
   /*   text-decoration: none; */
-   
-
 }
-.nav li
-{
-    margin: 1px 10px;  
-    list-style: none;
-    color: black;
-    
-    
+.nav li {
+  margin: 1px 10px;
+  list-style: none;
+  color: black;
 }
-.nav a
-{
-    text-decoration: none;
+.nav a {
+  text-decoration: none;
 }
 
-.banner
+.banner {
+  /*  border: 4px solid black; */
+  display: flex;
+  background-color: rgb(77, 154, 206);
+  height: 400px;
+}
+.Rider {
+  margin-left: 1058px;
+  /* border: 2px solid black; */
+}
+/* .adv {
+  border: 2px solid black;
+  margin-left: 40px;
+  margin-top: 60px;
+  width:50%;
+  padding: 5px;
+} */
+
+.Container
 {
-   /*  border: 4px solid black; */
+  margin-top: 30px;
+  margin-left: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  /* border: 2px solid black; */
+}
+.Explore
+{
+    margin-top: 30px;
+    margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    background-color: rgb(77, 154, 206);
-    height:400px;
 }
-.Rider
-{
-    margin-left: 1058px;
-
+.Explore div{
+    border: 2px solid black;
+    margin-top: 30px;
+    margin-left: 10px;
+    position: relative;
 }
