--- a/Dominos Clone/style.css
+++ b/Dominos Clone/style.css
@@ -59,12 +59,12 @@ body {
   padding: 5px;
 } */
 
-.Container
+.Coupons
 {
-  margin-top: 30px;
-  margin-left: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  /* border: 2px solid black; */
+    margin-top: 30px;
+    margin-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
 }
 .Explore
 {
@@ -74,8 +74,10 @@ body {
     display: flex;
 }
 .Explore div{
-    border: 2px solid black;
-    margin-top: 30px;
-    margin-left: 10px;
-    position: relative;
-}
+    border: 2px dotted black;
+    margin-top: 5px;
+    margin-left: 60px;
+    height: 250px;
+    width: 350px;
+    text-align: center;
+} 
