--- a/Dominos Clone/style.css
+++ b/Dominos Clone/style.css
@@ -89,7 +89,7 @@ body {
    height: 450px;
    margin-top: 40px;
    display: flex;
-   background-color: rgba(71, 76, 91, 0.529);  
+   background-color: rgba(209, 211, 219, 0.529);  
 }
 .Mobile{
 /*   margin-left: 350px; */
@@ -105,14 +105,17 @@ body {
   /* border: 2px solid black; */
 }
 .hoe1{
+
   margin-top: 15%;
   font-size: 40px;
   font-weight: 3000;
   font-family: Arial, Helvetica, sans-serif;
+      color: #98accb;
 }
 .hoe3{
   font-size: 25px;
   font-weight: 100;
   font-family: Arial, Helvetica, sans-serif;
+      color: #938d8d;
 }
 
