--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -1,20 +1,32 @@
-*{
-    padding: 0;
-    margin: 0;
-}
-.Contact{
-    width: 100%;
-    height: 100px;
-    background-color: rgb(48, 43, 43);
-}
-.icons{
-    display: flex;
-    margin-left: 15px;
-     list-style: none;
-     
-}
-.icons li{
-    margin: 20px 10px;
+* {
+  padding: 0;
+  margin: 0;
 
- 
+}
+.Contact {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  background-color: rgb(48, 43, 43);
+}
+.icons {
+  border: 2px solid white;
+  width: 100%;
+  display: flex;
+  margin-left: 15px;
+  list-style: none;
+}
+.icons li {
+  margin: 15px 10px;
+}
+.email{
+    border: 2px solid white;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    margin-left: 200px;
+    list-style: none;
+}
+.email li{
+    margin-top: 20px;
 }
