--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -10,7 +10,7 @@
   background-color: rgb(48, 43, 43);
 }
 .icons {
-  border: 2px solid white;
+ /*  border: 2px solid white; */
   width: 100%;
   display: flex;
   margin-left: 15px;
@@ -20,7 +20,7 @@
   margin: 15px 10px;
 }
 .email{
-    border: 2px solid white;
+   /*  border: 2px solid white; */
     width: 100%;
     height: 70px;
     display: flex;
@@ -29,4 +29,15 @@
 }
 .email li{
     margin-top: 20px;
+}
+.phone{
+   /*  border: 2px solid white; */
+    width: 100%;
+    height: 70px;
+    display: flex;
+    margin-left: 200px;
+    list-style: none;
+}
+.phone li{
+    margin: 20px 10px;
 }
