--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -65,10 +65,11 @@
     
 }
 .Nav{
-  border: 5px solid rgb(255, 0, 0);
+  /* border: 5px solid rgb(255, 0, 0); */
   width: 100%;
   height: 100px;
   display: flex;
+  background-color: #efcddc;
   
 }
 .navLogo{
@@ -94,3 +95,35 @@
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 600;
 }
+.Line7{
+  background-color:#efcddc;
+}
+.Heading{
+ /*  border: 5px solid red; */
+  width: 100%;
+  height: 100px;
+  display: flex;
+  background-color: #efcddc;
+ }
+.H1{
+ /*  border: 2px solid black; */
+  width: 50%;
+}
+.H1 h1{
+  text-align: right;
+  margin-right: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 70px
+}
+
+.H2{
+/*   border: 2px solid black; */
+  width: 50%;
+}
+.H2 h1{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 70px;
+  color: red;
+  margin-left: 5px;
+}
+
