--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -1,16 +1,15 @@
 * {
   padding: 0;
   margin: 0;
-
 }
 .Contact {
   display: flex;
   width: 100%;
   height: 80px;
-  background-color: #383C41;
+  background-color: #383c41;
 }
 .icons {
- /*  border: 2px solid white; */
+  /*  border: 2px solid white; */
   width: 100%;
   display: flex;
   margin-left: 15px;
@@ -19,111 +18,107 @@
 .icons li {
   margin: 15px 10px;
 }
-.email{
-   /*  border: 2px solid white; */
-    width: 100%;
-    height: 70px;
-    display: flex;
-    margin-left: 200px;
-    list-style: none;
+.email {
+  /*  border: 2px solid white; */
+  width: 100%;
+  height: 70px;
+  display: flex;
+  margin-left: 200px;
+  list-style: none;
 }
-.email li{
-     margin: 20px 10px;
+.email li {
+  margin: 20px 10px;
 }
-.phone{
-   /*  border: 2px solid white; */
-    width: 100%;
-    height: 70px;
-    display: flex;
-    margin-left: 200px;
-    list-style: none;
+.phone {
+  /*  border: 2px solid white; */
+  width: 100%;
+  height: 70px;
+  display: flex;
+  margin-left: 200px;
+  list-style: none;
 }
-.phone li{
-    margin: 20px 10px;
+.phone li {
+  margin: 20px 10px;
 }
 
-.enqborder{
+.enqborder {
   /*border: 2px solid white; */
   width: 100%;
   margin-left: 400px;
 }
-.enquiry{
-    border: 2px solid rgb(217, 57, 57);
-    border-radius: 10px;
-    background-color: #fc4045;
-    font-weight: 60;
-    margin-top: 8px;
-    width: 80%;
-    height: 60px;
-    display: flex;
-    list-style: none;
-    padding-left: 5px;
-    
+.enquiry {
+  border: 2px solid rgb(217, 57, 57);
+  border-radius: 10px;
+  background-color: #fc4045;
+  font-weight: 60;
+  margin-top: 8px;
+  width: 80%;
+  height: 60px;
+  display: flex;
+  list-style: none;
+  padding-left: 5px;
 }
-.enquiry li{
-    margin: 5px 10px;
-    
+.enquiry li {
+  margin: 5px 10px;
 }
-.Nav{
+.Nav {
   /* border: 5px solid rgb(255, 0, 0); */
   width: 100%;
   height: 100px;
   display: flex;
   background-color: #efcddc;
-  
 }
-.navLogo{
+.navLogo {
   /* border: 2px solid black; */
   width: 20%;
   margin: 30px 30px;
   height: 70px;
 }
-.navBar{
+.navBar {
   /* border: 2px solid black; */
   width: 60%;
   height: 50px;
   margin: 30px 20px 30px 200px;
 }
-.Bars{
-   list-style: none;
-   display: flex;
-   padding: 4px;
+.Bars {
+  list-style: none;
+  display: flex;
+  padding: 4px;
 }
-.Bars li{
-   margin: 5px 8px;
-   font-size: 25px;
-   font-family: Arial, Helvetica, sans-serif;
-   font-weight: 600;
+.Bars li {
+  margin: 5px 8px;
+  font-size: 25px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
 }
-.Line7{
-  background-color:#efcddc;
+.Line7 {
+  background-color: #efcddc;
 }
-.Heading{
- /*  border: 5px solid red; */
+.Heading {
+  /*  border: 5px solid red; */
   width: 100%;
   height: 100px;
   display: flex;
   background-color: #efcddc;
- }
-.H1{
- /*  border: 2px solid black; */
+}
+.H1 {
+  /*  border: 2px solid black; */
   width: 50%;
 }
-.H1 h1{
+.H1 h1 {
   text-align: right;
   margin-right: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 70px
+  font-size: 70px;
 }
 
-.H2{
-/*   border: 2px solid black; */
+.H2 {
+  /*   border: 2px solid black; */
   width: 50%;
 }
-.H2 h1{
+.H2 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 70px;
   color: red;
   margin-left: 5px;
 }
-
