--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -110,6 +110,7 @@
   margin-right: 10px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 70px;
+  color: #383c41;
 }
 
 .H2 {
@@ -119,6 +120,56 @@
 .H2 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 70px;
-  color: red;
+  color: #fc4045;
   margin-left: 5px;
+}
+.CoursesBar{
+  margin-left: 160px;
+ /*  border: 5px solid red; */
+  width: 82%;
+  height: 250px;
+  display: flex;
+}
+.apple{
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.apple img{
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.apple h4{
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+
+.flutter{
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.android{
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.reactNative{
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.react{
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.apple,.flutter,.android,.reactNative,.react{
+  margin: 20px 30px;
+  border-radius: 20px;
 }
