--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -123,23 +123,23 @@
   color: #fc4045;
   margin-left: 5px;
 }
-.CoursesBar{
+.CoursesBar {
   margin-left: 160px;
- /*  border: 5px solid red; */
+  /*  border: 5px solid red; */
   width: 82%;
   height: 250px;
   display: flex;
 }
-.apple{
+.apple {
   border: 2px solid black;
   width: 20%;
   height: 200px;
 }
-.apple img{
+.apple img {
   padding-left: 90px;
   padding-top: 20px;
 }
-.apple h4{
+.apple h4 {
   border: 2px solid #fc4045;
   background-color: #fc4045;
   color: white;
@@ -149,27 +149,45 @@
   border-radius: 10px;
 }
 
-.flutter{
+.flutter {
   border: 2px solid black;
   width: 20%;
   height: 200px;
 }
-.android{
+.flutter img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.flutter h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+
+.android {
   border: 2px solid black;
   width: 20%;
   height: 200px;
 }
-.reactNative{
+.reactNative {
   border: 2px solid black;
   width: 20%;
   height: 200px;
 }
-.react{
+.react {
   border: 2px solid black;
   width: 20%;
   height: 200px;
 }
-.apple,.flutter,.android,.reactNative,.react{
+.apple,
+.flutter,
+.android,
+.reactNative,
+.react {
   margin: 20px 30px;
   border-radius: 20px;
 }
