--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -79,6 +79,7 @@
   width: 60%;
   height: 50px;
   margin: 30px 20px 30px 200px;
+  color: #383c41;
 }
 .Bars {
   list-style: none;
@@ -167,21 +168,59 @@
   margin-right: 30px;
   border-radius: 10px;
 }
-
 .android {
   border: 2px solid black;
   width: 20%;
   height: 200px;
 }
-.reactNative {
+.android img{
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.android h4{
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.reactNative{
   border: 2px solid black;
   width: 20%;
   height: 200px;
+}
+.reactNative img{
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.reactNative h4{
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
 }
 .react {
   border: 2px solid black;
   width: 20%;
   height: 200px;
+}
+.react img{
+   padding-left: 90px;
+   padding-top: 20px;
+}
+.react h4{
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
 }
 .apple,
 .flutter,
