--- a/Dominos Clone/style.css
+++ b/Dominos Clone/style.css
@@ -16,9 +16,11 @@ body {
 
 .header {
   padding: 20px;
+  width: 100%;
   display: flex;
   height: 40px;
   background: rgb(255, 255, 255);
+  position: fixed;
 }
 .Logo {
   margin-left: 50px;
@@ -30,6 +32,7 @@ body {
   text-align: center;
   display: flex;
   margin: 10px 400px;
+  
   /*   text-decoration: none; */
 }
 .nav li {
@@ -47,16 +50,17 @@ body {
   /* border: 4px solid black; */
   display: flex;
   background-color: rgb(42, 92, 187);
-  height: 400px;
+  height: 500px;
 }
-/* .Rider {
-   margin-left: 1058px; 
-  border: 2px solid black;  
-}  */
+.Rider {
+   margin-left: 90px; 
+  /* border: 2px solid black;  */ 
+  margin-top: 90px;
+} 
 .adv {
   /* border: 2px solid black; */
   margin-left: 90px;
-  margin-top: 60px;
+  margin-top: 180px;
   width: 50%;
   padding: 15px;
 }
