--- a/Assignments/Q1.css
+++ b/Assignments/Q1.css
@@ -1,16 +1,74 @@
-.D1{
-    border: 5px solid black;
-    height: 300px;
-    width: 30%;
-    margin-left: 35%;
-    margin-top: 10%;
-    
+.box1 {
+  width: 80%;
+  height: 200px;
+  border: 2px solid #000;
+  padding: 20px;
+  text-align: center;
+  transform: translate(12%, 50%);
 }
-.D2{
-    border: 5px solid black;
-    height: 150px;
-    width: 80%;
-    margin-top: 10%;
 
-    
+.box2 {
+  width: 60%;
+  height: 400px;
+  border: 2px solid #000;
+  padding: 20px;
+  text-align: center;
+  transform: translate(30%, -50%);
+}
+.row1 {
+  /* border: 2px solid black; */
+  width: 100%;
+  height: 50px;
+  display: flex;
+  
+}
+.row2 {
+  /* border: 2px solid black; */
+  width: 100%;
+  height: 50px;
+  display: flex;
+}
+.row3 {
+  /* border: 2px solid black; */
+  width: 100%;
+  height: 50px;
+  display: flex;
+}
+.row4 {
+  /* border: 2px solid black; */
+  width: 100%;
+  height: 50px;
+  display: flex;
+}
+.row11{
+    border: 2px solid red;
+    width: 50px;
+    height: 40px;
+    margin: 4px;
+    margin-left: 20px;
+    background-color: red;
+}
+.row21{
+    border: 2px solid green;
+    width: 50px;
+    height: 40px;
+    margin: 4px;
+    margin-left: 20px;
+    background-color: green;
+}
+.row31{
+    border: 2px solid rgb(6, 32, 116);
+    width: 50px;
+    height: 40px;
+    margin: 4px;
+    margin-left: 20px;
+    background-color: rgb(6, 32, 116);
+}
+.row41{
+    border: 2px solid rgb(112, 0, 0); 
+    width: 50px;
+    height: 40px;
+    margin: 4px;
+    margin-left: 20px;
+    background-color: rgb(112, 0, 0);
 }
