--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -93,6 +93,15 @@
   font-size: 25px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
+  list-style: none;
+}
+.Bars li a {
+  text-decoration: none;
+  color: white;
+}
+.Bars li a:hover {
+  color: blue;
+  text-decoration: underline;
 }
 .Line7 {
   background-color: #efcddc;
@@ -343,14 +352,14 @@
 .Python {
   margin: 20px 30px;
   border-radius: 20px;
-   background-color: #ead8e0;
+  background-color: #ead8e0;
   border: 2px solid pink;
 }
 
 /* CoursesBar2*/
 .CoursesBar2 {
   margin-left: 160px;
- /*  border: 5px solid red; */
+  /*  border: 5px solid red; */
   width: 82%;
   height: 250px;
   display: flex;
@@ -452,11 +461,9 @@
 .Java {
   margin: 20px 30px;
   border-radius: 20px;
-   background-color: #ead8e0;
+  background-color: #ead8e0;
   border: 2px solid pink;
 }
-
-
 
 /* CoursesBar3*/
 .CoursesBar3 {
@@ -465,4 +472,41 @@
   width: 82%;
   height: 250px;
   display: flex;
+}
+
+.Spring {
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.Spring img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.Spring h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.ManualTesting {
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.ManualTesting img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.ManualTesting h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
 }
