--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -61,6 +61,11 @@
 .enquiry li {
   margin: 5px 10px;
 }
+.enquiry:hover{
+  border: 2px solid rgb(0, 0, 0);
+  margin-top: 4px;
+  height: 70px;
+}
 .Nav {
   /* border: 5px solid rgb(255, 0, 0); */
   width: 100%;
@@ -97,11 +102,11 @@
 }
 .Bars li a {
   text-decoration: none;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 .Bars li a:hover {
-  color: blue;
-  text-decoration: underline;
+  color: rgb(243, 8, 8);
+  text-decoration: overline;
 }
 .Line7 {
   background-color: #efcddc;
@@ -161,6 +166,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.apple:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 
 .flutter {
   border: 2px solid black;
@@ -180,6 +190,12 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.flutter:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
+
 .android {
   border: 2px solid black;
   width: 20%;
@@ -197,6 +213,11 @@
   margin-left: 30px;
   margin-right: 30px;
   border-radius: 10px;
+}
+.android:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
 }
 .reactNative {
   border: 2px solid black;
@@ -216,6 +237,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.reactNative:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .react {
   border: 2px solid black;
   width: 20%;
@@ -234,6 +260,12 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.react:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
+
 .apple,
 .flutter,
 .android,
@@ -272,6 +304,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.nodeJS:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .angularJS {
   border: 2px solid black;
   width: 20%;
@@ -289,6 +326,11 @@
   margin-left: 30px;
   margin-right: 30px;
   border-radius: 10px;
+}
+.angularJS:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
 }
 .MernStack {
   border: 2px solid black;
@@ -308,6 +350,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.MernStack:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .MeanStack {
   border: 2px solid black;
   width: 20%;
@@ -326,6 +373,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.MeanStack:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .Python {
   border: 2px solid black;
   width: 20%;
@@ -343,6 +395,11 @@
   margin-left: 30px;
   margin-right: 30px;
   border-radius: 10px;
+}
+.Python:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
 }
 
 .nodeJS,
@@ -382,6 +439,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.Django:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .DataScience {
   border: 2px solid black;
   width: 20%;
@@ -399,6 +461,11 @@
   margin-left: 30px;
   margin-right: 30px;
   border-radius: 10px;
+}
+.DataScience:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
 }
 .DataAnalytics {
   border: 2px solid black;
@@ -418,6 +485,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.DataAnalytics:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .AI {
   border: 2px solid black;
   width: 20%;
@@ -436,6 +508,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.AI:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .Java {
   border: 2px solid black;
   width: 20%;
@@ -453,6 +530,11 @@
   margin-left: 30px;
   margin-right: 30px;
   border-radius: 10px;
+}
+.Java:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
 }
 .Django,
 .DataScience,
@@ -492,6 +574,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.Spring:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .ManualTesting {
   border: 2px solid black;
   width: 20%;
@@ -510,23 +597,10 @@
   margin-right: 30px;
   border-radius: 10px;
 }
-.ManualTesting {
+.ManualTesting:hover{
   border: 2px solid black;
-  width: 20%;
-  height: 200px;
-}
-.ManualTesting img {
-  padding-left: 90px;
-  padding-top: 20px;
-}
-.ManualTesting h4 {
-  border: 2px solid #fc4045;
-  background-color: #fc4045;
-  color: white;
-  padding: 10px;
-  margin-left: 30px;
-  margin-right: 30px;
-  border-radius: 10px;
+  width: 22%;
+  height: 220px;
 }
 .TestingAutomation {
   border: 2px solid black;
@@ -546,6 +620,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.TestingAutomation:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .ASPNETWebDevelopment {
   border: 2px solid black;
   width: 20%;
@@ -564,6 +643,11 @@
   margin-right: 30px;
   border-radius: 10px;
 }
+.ASPNETWebDevelopment:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
+}
 .ProgramminginC {
   border: 2px solid black;
   width: 20%;
@@ -581,6 +665,11 @@
   margin-left: 30px;
   margin-right: 30px;
   border-radius: 10px;
+}
+.ProgramminginC:hover{
+  border: 2px solid black;
+  width: 22%;
+  height: 220px;
 }
 .Spring,
 .ManualTesting,
