--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -682,3 +682,137 @@
   background-color: #ead8e0;
   border: 2px solid pink;
 }
+/* CoursesBar4*/
+
+.CourseBar4 {
+  margin-left: 160px;
+  /* border: 5px solid red; */
+  width: 82%;
+  height: 250px;
+  display: flex;
+}
+.cpp {
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.cpp img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.cpp h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.cpp:hover {
+  border: 2px solid black;
+  width: 22%;
+  height: 220px; 
+}
+.DSA {
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.DSA img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.DSA h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.DSA:hover {
+  border: 2px solid black;
+  width: 22%;
+  height: 220px; 
+}
+.itBusiness {
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.itBusiness img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.itBusiness h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.itBusiness:hover {
+  border: 2px solid black;
+  width: 22%;
+  height: 220px; 
+}
+.DigitalMarketing {
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.DigitalMarketing img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.DigitalMarketing h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.DigitalMarketing:hover {
+  border: 2px solid black;
+  width: 22%;
+  height: 220px; 
+}
+.Salesforce {
+  border: 2px solid black;
+  width: 20%;
+  height: 200px;
+}
+.Salesforce img {
+  padding-left: 90px;
+  padding-top: 20px;
+}
+.Salesforce h4 {
+  border: 2px solid #fc4045;
+  background-color: #fc4045;
+  color: white;
+  padding: 10px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-radius: 10px;
+}
+.Salesforce:hover {
+  border: 2px solid black;
+  width: 22%;
+  height: 220px; 
+}
+.cpp,
+.DSA,
+.itBusiness,
+.DigitalMarketing,
+.Salesforce {
+  margin: 20px 30px;
+  border-radius: 20px;
+  background-color: #ead8e0;
+  border: 2px solid pink;
+}
