--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -816,3 +816,58 @@
   background-color: #ead8e0;
   border: 2px solid pink;
 }
+.InqBox{
+  /* border: 2px solid red; */
+  width: 100%;
+  height: 800px;
+  margin-top: 80px;
+  background-color: #494949;
+}
+.QuickInquiry{
+  margin-top: 20px;
+  /* border: 2px solid red; */
+  padding-left: 40%;
+}
+.formBox{
+ /*  border: 2px solid red; */
+  height: 600px;
+  display: flex;
+}
+.ContactForm{
+  /* border: 2px solid red; */
+  width: 50%;
+  height: 600px;
+}
+.imgBox{
+  /* border: 2px solid red; */
+  width: 50%;
+  height: 500px;
+  padding-left: 20px;
+  padding-top: 20px;
+}
+.formData{
+  padding-left: 200px;
+  padding-top: 20px;
+  height: 500px;
+  /* border: 2px solid red; */
+}
+.formData input{
+  width: 100%;
+  height: 70px;
+  border-radius: 5px;
+  margin: 2px;
+  font-size: 25px;
+}
+.formData textarea{
+  width: 100%;
+  height: 180px;
+  border-radius: 5px;
+  margin: 2px;
+  font-size: 25px;
+}
+.submit{
+  background-color: #fc4045;
+  border: 2px solid #fc4045;
+  color: white;
+  height: 500px;
+}
