--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -670,7 +670,6 @@
   border: 2px solid black;
   width: 22%;
   height: 220px;
-  
 }
 .Spring,
 .ManualTesting,
@@ -712,7 +711,7 @@
 .cpp:hover {
   border: 2px solid black;
   width: 22%;
-  height: 220px; 
+  height: 220px;
 }
 .DSA {
   border: 2px solid black;
@@ -735,7 +734,7 @@
 .DSA:hover {
   border: 2px solid black;
   width: 22%;
-  height: 220px; 
+  height: 220px;
 }
 .itBusiness {
   border: 2px solid black;
@@ -758,7 +757,7 @@
 .itBusiness:hover {
   border: 2px solid black;
   width: 22%;
-  height: 220px; 
+  height: 220px;
 }
 .DigitalMarketing {
   border: 2px solid black;
@@ -781,7 +780,7 @@
 .DigitalMarketing:hover {
   border: 2px solid black;
   width: 22%;
-  height: 220px; 
+  height: 220px;
 }
 .Salesforce {
   border: 2px solid black;
@@ -804,7 +803,7 @@
 .Salesforce:hover {
   border: 2px solid black;
   width: 22%;
-  height: 220px; 
+  height: 220px;
 }
 .cpp,
 .DSA,
@@ -816,58 +815,69 @@
   background-color: #ead8e0;
   border: 2px solid pink;
 }
-.InqBox{
+.InqBox {
   /* border: 2px solid red; */
   width: 100%;
-  height: 800px;
+  height: 700px;
   margin-top: 80px;
   background-color: #494949;
 }
-.QuickInquiry{
+.QuickInquiry {
   margin-top: 20px;
   /* border: 2px solid red; */
   padding-left: 40%;
 }
-.formBox{
- /*  border: 2px solid red; */
+.formBox {
+  /*  border: 2px solid red; */
   height: 600px;
   display: flex;
 }
-.ContactForm{
+.ContactForm {
   /* border: 2px solid red; */
   width: 50%;
   height: 600px;
 }
-.imgBox{
+.imgBox {
   /* border: 2px solid red; */
   width: 50%;
   height: 500px;
-  padding-left: 20px;
+  padding-left: 30px;
   padding-top: 20px;
 }
-.formData{
+.formData {
   padding-left: 200px;
   padding-top: 20px;
   height: 500px;
   /* border: 2px solid red; */
 }
-.formData input{
+.formData input {
   width: 100%;
   height: 70px;
-  border-radius: 5px;
+  border-radius: 8px;
   margin: 2px;
   font-size: 25px;
+  padding-left: 15px;
+  font-family: Arial, Helvetica, sans-serif;
 }
-.formData textarea{
+.formData textarea {
   width: 100%;
   height: 180px;
   border-radius: 5px;
   margin: 2px;
   font-size: 25px;
+  padding-top: 10px;
+  padding-left: 15px;
+  font-family: Arial, Helvetica, sans-serif;
 }
-.submit{
+.submit {
   background-color: #fc4045;
   border: 2px solid #fc4045;
   color: white;
-  height: 500px;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.bottom{
+  width: 100%;
+  height: 300px;
+  background-color:#efcddc; 
 }
