--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -107,6 +107,7 @@
 .Bars li a:hover {
   color: rgb(243, 8, 8);
   text-decoration: overline;
+  font-size: 20px;
 }
 .Line7 {
   background-color: #efcddc;
@@ -859,7 +860,7 @@
   padding-left: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
-.formData input:hover{
+.formData input:hover {
   width: 100%;
   height: 90px;
   border-radius: 10px;
@@ -878,7 +879,7 @@
   padding-left: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
-.formData textarea:hover{
+.formData textarea:hover {
   width: 100%;
   height: 200px;
   border-radius: 5px;
