--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -107,7 +107,7 @@
 .Bars li a:hover {
   color: rgb(243, 8, 8);
   text-decoration: overline;
-  font-size: 20px;
+  font-size: 20px; 
 }
 .Line7 {
   background-color: #efcddc;
@@ -851,7 +851,7 @@
   height: 500px;
   /*  border: 2px solid red; */
 }
-.formData input {
+.formData input{
   width: 100%;
   height: 70px;
   border-radius: 8px;
@@ -889,7 +889,7 @@
   padding-left: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
-.submit {
+ .submit {
   background-color: #fc4045;
   border: 2px solid #fc4045;
   color: white;
@@ -898,6 +898,11 @@
 }
 .bottom {
   width: 100%;
-  height: 200px;
+  height: 300px;
   background-color: #efcddc;
+}
+.bottomImage{
+  border: 2px solid red;
+  width: 20%;
+  margin: 20px 10px;
 }
