--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -898,11 +898,30 @@
 }
 .bottom {
   width: 100%;
-  height: 300px;
+  height: 400px;
   background-color: #efcddc;
+  display: flex;
 }
 .bottomImage{
   border: 2px solid red;
+  height: 70px;
   width: 20%;
-  margin: 20px 10px;
+  padding-top: 50px;
+  padding-left: 90px;
+}
+.sociaLinks{
+  border: 2px solid red;
+  height: 70px;
+  width: 20%;
+  padding-top: 50px;
+  padding-left: 90px;
+}
+.contactCB{
+  
+  border: 2px solid red;
+  height: 70px;
+  width: 20%;
+  padding-top: 50px;
+  padding-left: 90px;
+  display: flex;
 }
