--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -107,7 +107,7 @@
 .Bars li a:hover {
   color: rgb(243, 8, 8);
   text-decoration: overline;
-  font-size: 20px; 
+  font-size: 20px;
 }
 .Line7 {
   background-color: #efcddc;
@@ -851,7 +851,7 @@
   height: 500px;
   /*  border: 2px solid red; */
 }
-.formData input{
+.formData input {
   width: 100%;
   height: 70px;
   border-radius: 8px;
@@ -889,7 +889,7 @@
   padding-left: 15px;
   font-family: Arial, Helvetica, sans-serif;
 }
- .submit {
+.submit {
   background-color: #fc4045;
   border: 2px solid #fc4045;
   color: white;
@@ -897,31 +897,62 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 .bottom {
+  /* border: 2px solid red; */
   width: 100%;
-  height: 400px;
+  height: 100px;
   background-color: #efcddc;
   display: flex;
 }
-.bottomImage{
-  border: 2px solid red;
+.bottomImage {
+  /* border: 2px solid red; */
   height: 70px;
   width: 20%;
   padding-top: 50px;
   padding-left: 90px;
 }
-.sociaLinks{
-  border: 2px solid red;
+.sociaLinks {
+  /* border: 2px solid red; */
   height: 70px;
   width: 20%;
   padding-top: 50px;
   padding-left: 90px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
 }
-.contactCB{
-  
-  border: 2px solid red;
+.contactCB {
+  /* border: 2px solid red; */
   height: 70px;
   width: 20%;
   padding-top: 50px;
-  padding-left: 90px;
+  padding-left: 70px;
   display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+}
+.contactNO {
+  /* border: 2px solid red; */
+  height: 70px;
+  width: 20%;
+  display: flex;
+  padding-top: 50px;
+  padding-left: 70px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+}
+.footerLine {
+  background-color: #efcddc;
+  height: 40px;
+}
+.bottom-last {
+  background-color: #efcddc;
+  height: 60px;
+}
+.bottom-last-last {
+  /* border: 2px solid red; */
+  width: 90%;
+  display: flex;
+  padding-top: 10px;
+  margin-left: 50px;
+  justify-content: space-between;
+  font-family: Arial, Helvetica, sans-serif;
 }
