--- a/CB Clone/style.css
+++ b/CB Clone/style.css
@@ -918,6 +918,7 @@
   padding-left: 90px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
+  display: flex;
 }
 .contactCB {
   /* border: 2px solid red; */
