--- a/zomato clone/style.css
+++ b/zomato clone/style.css
@@ -36,7 +36,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 600;
 }
-.location{
+/* .location{
     border: 2px solid rgb(255, 255, 255);
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
@@ -80,4 +80,5 @@
 
 .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: #3e8e41;} */
+
